--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     />
 
     <link rel="stylesheet" href="./font-awesome.min.css" />
-    <title>React App</title>
+    <title>Michael Hammer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
